--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 body {
   margin: 0;
   overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 body p {
   position: absolute;
   top: 5px;
   left: 5px;
+}
+.item{
+  position: absolute;
 }
