--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   overflow: hidden;
   width: 100vw;
   height: 100vh;
-  font-family: Gill Sans;
+  font-family: "Lucida Console", Monaco, monospace;
 }
 .item{
   position: absolute;
