--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,10 @@ body {
   position: absolute;
   width: 400px;
 }
+.Impagelinks{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0.5em;
+}
