--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,21 @@ textarea:focus {
   background: #000;
   color: #fff;
 }
+
+
+.closem {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  border-left: 80px solid transparent;
+  border-top: 80px solid #f043bf;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.closem:hover {
+  border-left: 160px solid transparent;
+  border-top: 160px solid #ffc46e;
+}
